--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
     <title>DTA Studio - Build. Automate. Innovate.</title>
     <meta name="description" content="DTA Studio creates powerful tools and applications that streamline your workflow and boost productivity." />
     <meta name="author" content="DTA Studio" />
@@ -11,11 +11,11 @@
     <meta property="og:title" content="DTA Studio - Build. Automate. Innovate." />
     <meta property="og:description" content="DTA Studio creates powerful tools and applications that streamline your workflow and boost productivity." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@DTAStudio" />
-    <meta name="twitter:image" content="/logo.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
